...
    "main": [
        "humidity" : "81",
        "pressure" : "1012",
        "temp" : "280.32",
        "temp_max" : "281.15",
        "temp_min" : "279.15",
    ], "name": "London",
       "id": "2643743",
       "coord": [
        "lat" : "51.51",
        "lon" : "-0.13",
    ], "weather": [
        [
...
