...
        return label
    }()
    
    let backButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle("Back", for: .normal)
        button.titleLabel?.textColor = .white
        button.backgroundColor = UIColor(white: 0.9, alpha: 0.5)
        button.layer.cornerRadius = 20
        button.addTarget(self, action: #selector(handleButton), for: .touchUpInside)
        return button
    }()
...
