...
    
    func addGestureConfiguratios() {
        let tapGesture = UITapGestureRecognizer(target:self, action: #selector(handleTapGesture))
        self.addGestureRecognizer(tapGesture)
        if controlView != nil {
            self.findWeather.translatesAutoresizingMaskIntoConstraints = false
            self.findWeather.titleLabel?.text = "Find"
            controlView.backgroundColor = UIColor(white: 0.9, alpha: 0.2)
            controlView.layer.cornerRadius = self.controlView.frame.height / 2 - 5
            self.textField.backgroundColor = UIColor(white: 0.9, alpha: 1)
            self.controlLabel.textColor = UIColor(white: 0.9, alpha: 1)
            self.findWeather.titleLabel?.textColor = UIColor(white: 0.9, alpha: 1)
            self.findWeather.backgroundColor = UIColor(white: 0.5, alpha: 1)
...
